--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
             <button class = "times">x</button>
         </div>
         <div class ="rowThree">
-            <button class = "clear">4</button>
+            <button class = "four">4</button>
             <button class = "five">5</button>
             <button class = "six">6</button>
             <button class = "minus">-</button>
         </div>
         <div class ="rowFour">
-            <button class = "clear">1</button>
+            <button class = "one">1</button>
             <button class = "two">2</button>
             <button class = "three">3</button>
             <button class = "plus">+</button>
         </div>
         <div class ="rowFive">
-            <button class = "zero">%</button>
+            <button class = "zero">0</button>
             <button class = "decimal">±</button>
-            <button class = "equals">%</button>
+            <button class = "equals">=</button>
         </div>
            
     </div>
