--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class ="rowFive">
             <button class = "zero">0</button>
-            <button class = "decimal">±</button>
+            <button class = "decimal">.</button>
             <button class = "equals">=</button>
         </div>
            
