add text file to mark task and add more function to buttons numerical buttons

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -17,27 +17,27 @@
             <button class = "divide">÷</button>
         </div>
         <div class ="rowTwo">
-            <button class = "seven">7</button>
-            <button class = "eight">8</button>
-            <button class = "nine">9</button>
+            <button class = "seven" onclick = "change_toSeven()">7</button>
+            <button class = "eight" onclick = "change_toEight()">8</button>
+            <button class = "nine" onclick = "change_toNine()">9</button>
             <button class = "times">x</button>
         </div>
         <div class ="rowThree">
-            <button class = "four">4</button>
-            <button class = "five">5</button>
-            <button class = "six">6</button>
-            <button class = "minus">-</button>
+            <button class = "four" onclick = "change_toFour()">4</button>
+            <button class = "five" onclick = "change_toFive()">5</button>
+            <button class = "six" onclick = "change_toSix()">6</button>
+            <button class = "minus" onclick = "">-</button>
         </div>
         <div class ="rowFour">
-            <button class = "one" onclick= "change_text()">1</button>
-            <button class = "two">2</button>
-            <button class = "three">3</button>
-            <button class = "plus">+</button>
+            <button class = "one" onclick= "change_toOne()">1</button>
+            <button class = "two" onclick = "change_toTwo()">2</button>
+            <button class = "three" onclick = "change_toThree()">3</button>
+            <button class = "plus ">+</button>
         </div>
         <div class ="rowFive">
-            <button class="zero">0</button>
-            <button class="decimal">.</button>
-            <button class="equals">=</button>
+            <button class="zero" onclick="change_toZero()">0</button>
+            <button class="decimal" onclick = "">.</button>
+            <button class="equals" onclick = "">=</button>
         </div>
            
     </div>
